# zelda

./: .gitignore  README.md  build.gradle  settings.gradle
base-lib-stub/: build.gradle
base-lib-stub/src/main/java/android/content/pm/: IPackageManager.java  PackageParser.java
buildSrc/: build.gradle
buildSrc/src/main/java/com/virjar/zelda/buildsrc/: Constants.java
gradle/wrapper/: gradle-wrapper.properties
script/: dev-zelda.sh  prod-zelda.sh
zelda-builder/: .gitignore  build-Base.gradle  build-Release.gradle  build.gradle
zelda-builder/src/main/java/com/android/apksig/: ApkSigner.java  ApkVerifier.java  DefaultApkSignerEngine.java  SigningCertificateLineage.java
zelda-builder/src/main/java/com/android/apksig/internal/apk/: ApkSigningBlockUtils.java
zelda-builder/src/main/java/com/android/apksigner/: ApkSignerTool.java  SignerParams.java
zelda-builder/src/main/java/com/virjar/zelda/apkbuilder/: ManifestHandlers.java  ReNameEntry.java  Util.java  ZeldaBuildContext.java  ZeldaBuilder.java
zelda-engine/: build.gradle  proguard-rules.pro
zelda-engine/src/main/: AndroidManifest.xml
zelda-engine/src/main/cpp/: CMakeLists.txt
zelda-engine/src/main/cpp/Foundation/: IOUniformer.cpp  Log.h  SandboxFs.cpp  SymbolFinder.cpp
zelda-engine/src/main/cpp/Jni/: Helper.cpp  Helper.h  VAJni.cpp  VAJni.h
zelda-engine/src/main/java/com/virjar/zelda/engine/: APIInitializer.java  HiddenAPIEnforcementPolicyUtils.java  NativeEngine.java  SDK_VERSION_CODES.java  ZeldaApplication.java  ZeldaConfig.java  ZeldaEnvironment.java  ZeldaRuntime.java
(+23 files in other folders)
